[gd_scene load_steps=10 format=3 uid="uid://b5o8l2iklites"]

[ext_resource type="Texture2D" uid="uid://bv3wcjcvgudwa" path="res://assets/Sprites/stun_stars.png" id="2_6wl64"]
[ext_resource type="Texture2D" uid="uid://dwuyrrqorjdcl" path="res://assets/Sprites/bugs/doodle_pillbug.png" id="2_a7w1d"]
[ext_resource type="Shader" uid="uid://cog4aqnlmqh0b" path="res://src/shaders/bug.gdshader" id="2_n1vdf"]
[ext_resource type="Script" uid="uid://0bgvuqadhxfu" path="res://src/bug.gd" id="2_tcnvp"]
[ext_resource type="Script" uid="uid://biftf3kr6tko1" path="res://src/state/models/state_machine.gd" id="3_euec3"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6wl64"]
shader = ExtResource("2_n1vdf")
shader_parameter/strength = 0.0

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_n1vdf"]
particles_animation = true
particles_anim_h_frames = 2
particles_anim_v_frames = 2
particles_anim_loop = false

[sub_resource type="Gradient" id="Gradient_6wl64"]
offsets = PackedFloat32Array(0.758621, 0.808777)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_a7w1d"]
radius = 6.0

[node name="Bug" type="RigidBody2D"]
collision_mask = 2
script = ExtResource("2_tcnvp")

[node name="Rays" type="Node2D" parent="."]

[node name="RayS" type="RayCast2D" parent="Rays"]
unique_name_in_owner = true
collision_mask = 2

[node name="RaySW" type="RayCast2D" parent="Rays"]
unique_name_in_owner = true
rotation = 0.785398
collision_mask = 2

[node name="RayW" type="RayCast2D" parent="Rays"]
unique_name_in_owner = true
rotation = 1.5708
collision_mask = 2

[node name="RayNW" type="RayCast2D" parent="Rays"]
unique_name_in_owner = true
rotation = 2.35619
collision_mask = 2

[node name="RayN" type="RayCast2D" parent="Rays"]
unique_name_in_owner = true
rotation = 3.14159
collision_mask = 2

[node name="RayNE" type="RayCast2D" parent="Rays"]
unique_name_in_owner = true
rotation = 3.92699
collision_mask = 2

[node name="RayE" type="RayCast2D" parent="Rays"]
unique_name_in_owner = true
rotation = 4.71239
collision_mask = 2

[node name="RaySE" type="RayCast2D" parent="Rays"]
unique_name_in_owner = true
rotation = 5.49779
collision_mask = 2

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_6wl64")
texture = ExtResource("2_a7w1d")

[node name="StunParticles" type="CPUParticles2D" parent="."]
unique_name_in_owner = true
material = SubResource("CanvasItemMaterial_n1vdf")
emitting = false
amount = 15
texture = ExtResource("2_6wl64")
lifetime = 0.3
one_shot = true
preprocess = 0.05
explosiveness = 1.0
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 200.0
initial_velocity_max = 200.0
angular_velocity_min = -720.0
angular_velocity_max = 720.0
linear_accel_min = -400.0
linear_accel_max = -400.0
angle_min = -720.0
angle_max = 720.0
color_ramp = SubResource("Gradient_6wl64")
hue_variation_min = -0.21
hue_variation_max = 0.1
anim_offset_max = 1.0

[node name="StunCircle" type="Node2D" parent="StunParticles"]
unique_name_in_owner = true
visible = false

[node name="Star1" type="Sprite2D" parent="StunParticles/StunCircle"]
position = Vector2(0, -24)
texture = ExtResource("2_6wl64")
hframes = 2
vframes = 2

[node name="Star2" type="Sprite2D" parent="StunParticles/StunCircle"]
position = Vector2(-13, -20)
texture = ExtResource("2_6wl64")
hframes = 2
vframes = 2
frame = 1

[node name="Star3" type="Sprite2D" parent="StunParticles/StunCircle"]
position = Vector2(-21, -8)
texture = ExtResource("2_6wl64")
hframes = 2
vframes = 2
frame = 2

[node name="Star4" type="Sprite2D" parent="StunParticles/StunCircle"]
position = Vector2(-24, 0)
texture = ExtResource("2_6wl64")
hframes = 2
vframes = 2
frame = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CapsuleShape2D_a7w1d")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("bug")]
unique_name_in_owner = true
script = ExtResource("3_euec3")
bug = NodePath("..")
